# torchzfp

./: .gitignore  CMakeLists.txt  README.md  ZFPTensor.lua  init.lua  torchzfp.cpp
generic/: torchzfp.cpp
rocks/: torchzfp-1.0-1.rockspec
test/: test.lua
zfp-0.5.0/: CMakeLists.txt
