CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)
SET(CMAKE_VERBOSE_MAKEFILE OFF)

FIND_PACKAGE(Torch REQUIRED)

ADD_SUBDIRECTORY(zfp-0.5.0)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/zfp-0.5.0/inc)
ADD_DEFINITIONS(-std=c++11)
ADD_DEFINITIONS(-fPIC)
ADD_DEFINITIONS(-pedantic-errors)
SET(src torchzfp.cpp)

FILE(GLOB luasrc *.lua)
SET(luasrc init.lua ${luasrc})

ADD_TORCH_PACKAGE(torchzfp "${src}" "${luasrc}" "Torch zfp utility library")
TARGET_LINK_LIBRARIES(torchzfp luaT TH zfp)
INSTALL(FILES "README.md" DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/torchzfp")
